场景：parabola 学习抛物线 （添加背景图片）

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -1,7 +1,9 @@
 {
   "general": {
     "designResolution": {
-      "fitHeight": true
+      "fitHeight": true,
+      "width": 1920,
+      "height": 1024
     }
   }
 }
